Deleted input form

--- a/popup.html
+++ b/popup.html
@@ -5,19 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPress Theme and Plugin Detector</title>
-    <link rel="stylesheet" href="/styles.css">
-    <script src="input.js"></script>
+    <link rel="stylesheet" href="/styles2.css">
+    <script src="input2.js"></script>
 </head>
 
 <body>
     <section class="container container__input">
-        <form class="border input--form" id="inputForm">
-            <input class="input--input" type="text" id="inputUrl" placeholder="Enter any website" />
-            <button class="button__input" type="submit">Analize Website</button>
-        </form>
-
         <div id="outputContainer"></div>
     </section>
 </body>
 
 </html>
+
