make requests work

--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WordPress Theme and Plugin Detector</title>
-    <link rel="stylesheet" href="/styles2.css">
-    <script src="input2.js"></script>
-</head>
-
-<body>
-    <section class="container container__input">
-        <div id="outputContainer"></div>
-    </section>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WordPress Theme and Plugin Detector</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="input.js"></script>
+    </head>
+    <body>
+        <section class="container container__input">
+            <div id="wpContainer"></div>
+            <div id="themesContainer"></div>
+            <div id="pluginsContainer"></div>
+        </section>
+    </body>
 </html>
 
