added google fonts

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,9 @@
         <title>WordPress Theme and Plugin Detector</title>
         <link rel="stylesheet" href="styles.css">
         <script src="input.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">    
     </head>
     <body>
         <section class="container container__input">
