added footer links

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,10 @@
             <div id="wpContainer"></div>
             <div id="themesContainer"></div>
             <div id="pluginsContainer"></div>
+            <div class="footer__links">
+                <a href="https://wp-detector.com/report-issue" target="_blank">Report Issue</a>
+                <a href="https://wp-detector.com/privacy-policy" target="_blank">Privacy Policy</a>
+            </div>
         </section>
     </body>
 </html>
