--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
             <div id="pluginsContainer"></div>
             <div class="footer__links">
                 <a href="https://wp-detector.com/report-issue" target="_blank">Report Issue</a>
-                <a href="https://wp-detector.com/privacy-policy" target="_blank">Privacy Policy</a>
+                <a href="https://wp-detector.com/extension-privacy-policy" target="_blank">Privacy Policy</a>
             </div>
         </section>
     </body>
