--- a/popup.html
+++ b/popup.html
@@ -14,8 +14,8 @@
             <div id="pluginsContainer"></div>
             <div id="reviewContainer"></div>
             <div class="footer__links">
-                <a href="https://wp-detector.com/report-issue" target="_blank">Report Issue</a>
-                <a href="https://wp-detector.com/extension-privacy-policy" target="_blank">Privacy Policy</a>
+                <a href="https://wp-detector.com/report-issue/?utm_source=chrome-extension" target="_blank">Report Issue</a>
+                <a href="https://wp-detector.com/extension-privacy-policy/?utm_source=chrome-extension" target="_blank">Privacy Policy</a>
             </div>
         </section>
     </body>
